--- a/spring-la-mia-pizzeria-crud/src/main/resources/templates/pizze/list.html
+++ b/spring-la-mia-pizzeria-crud/src/main/resources/templates/pizze/list.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 <title>Pizze</title>
 </head>
-<body>
+<body class="bg-light">
 
 <div class="container">
     <h1 class="text-center" >Lista Pizze</h1>
@@ -35,9 +35,11 @@
             <td>
                 <a class="btn btn-warning margine" th:href="@{/pizze/show/{id}(id=${pizza.id})}">Dettagli</a>
             </td>
+
         </tr>
         </tbody>
     </table>
+    <div><a class="btn btn-warning margine" th:href="@{/pizze/create}">Aggiungi la tua pizza</a></div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
