--- a/spring-la-mia-pizzeria-crud/src/main/resources/templates/pizze/show.html
+++ b/spring-la-mia-pizzeria-crud/src/main/resources/templates/pizze/show.html
@@ -20,7 +20,7 @@
         <div class="col-12 mt-5">
             <h1 class="text-center" th:text="${pizza.name}"></h1>
             <h2 class="text-center mt-3" th:text="${pizza.description}"></h2>
-            <h3 class="text-center mt-2" th:text="${pizza.price} + €"> </h3>
+            <h3 class="text-center mt-2" th:text="${pizza.price} + ' '+ €"> </h3>
         </div>
     </div>
     <div class="mt-4">
