--- a/spring-la-mia-pizzeria-crud/src/main/resources/templates/pizze/list.html
+++ b/spring-la-mia-pizzeria-crud/src/main/resources/templates/pizze/list.html
@@ -35,6 +35,9 @@
             <td>
                 <a class="btn btn-warning margine" th:href="@{/pizze/show/{id}(id=${pizza.id})}">Dettagli</a>
             </td>
+            <td>
+                <a class="btn btn-warning margine" th:href="@{/pizze/edit/{id}(id=${pizza.id})}">Modifica</a>
+            </td>
 
         </tr>
         </tbody>
